# spherepack_c

./: CMakeLists.txt  LICENSE  alf.c  divec.c  dives.c  divgc.c  divgs.c  gaqd.c  geo2math.c  gradec.c  grades.c  gradgc.c  gradgs.c  helmsph.c  hrfft.c  idivec.c  idives.c  idivgc.c  idivgs.c  idvtec.c  idvtes.c  idvtgc.c  idvtgs.c  igradec.c  igrades.c  igradgc.c  igradgs.c  ihgeod.c  isfvpec.c  isfvpes.c  isfvpgc.c  isfvpgs.c  islapec.c  islapec3l.c  islapes.c  islapgc.c  islapgs.c  ivlapec.c  ivlapes.c  ivlapgc.c  (+64 more)
contrib/: CMakeLists.txt  err.c  fio.h  util.c
scilab/: spherepack.sce
src/: CMakeLists.txt  alf.c  dives.c  divgs.c  gaqd.c  gradec.c  gradgs.c  helmsph.c  idivec.c  idvtec.c  idvtes.c  igrades.c  ihgeod.c  isfvpgc.c  islapec.c  islapes.c  ivlapec.c  ivlapgc.c  ivrtec.c  ivrtgs.c  sfvpec.c  sfvpes.c  sfvpgc.c  shaec.c  shagc.c  shags.c  shigc.c  shigs.c  shpg.c  shsec.c  shsgc.c  shsgs.c  slapec.c  slapes.c  sshifte.c  vhaec.c  vhaes.c  vhses.c  visequ.c  vlapec.c  (+8 more)
